install/0000_90_machine-api-operator_05_networkpolicy-allow-ingress-kubeapi.yaml
# Allow ingress to the openshift-machine-api namespace pods for kubeapi requests
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-kubeapi
  namespace: openshift-machine-api
  annotations:
    capability.openshift.io/name: MachineAPI
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  ingress:
  - ports:
    - protocol: TCP
      port: 8443
    - protocol: TCP
      port: 9443
  podSelector:
    matchExpressions:
    - key: k8s-app
      operator: In
      values:
      - cluster-autoscaler
      - cluster-autoscaler-operator
      - cluster-baremetal-operator
      - control-plane-machine-set-operator
      - controller
      - machine-api-operator
  policyTypes:
  - Ingress
